# Copyright 2018 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "supply-chain-tp"
version = "0.10.1"
authors = ["Cargill Incorporated"]
description = "Sawtooth Supply Chain Transaction Processor"
homepage = "https://github.com/hyperledger/sawtooth-supply-chain"

[dependencies]
sawtooth_sdk = { git = "https://github.com/hyperledger/sawtooth-core.git" }
rust-crypto = "0.2.36"
rustc-serialize = "0.3.22"
zmq = { git = "https://github.com/erickt/rust-zmq", branch = "release/v0.8" }
clap = "2"
protobuf = "2"
log = "0.3.0"
log4rs = "0.7.0"

[build-dependencies]
protoc-rust = "2"
glob = "0.2"
